Mobile bottom alignment fix

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ button:hover {
         left: 50%;
         /* Centered on element itself */
         transform: translate(-50%, 0);
-        bottom: 15%;
+        bottom: 5%;
     }
 
     .player-section {
@@ -84,6 +84,6 @@ button:hover {
         left: 50%;
         /* Centered on element itself */
         transform: translate(-50%, 0);
-        bottom: 20%;
+        bottom: 15%;
     }
 }
